Hide number spin boxes. Roll HP increase properly. Fix button overlap.

--- a/src/app.css
+++ b/src/app.css
@@ -176,6 +176,16 @@
 		padding: calc(var(--spacing) / 2);
 		border-radius: var(--radius-sm);
 	}
+
+	input::-webkit-outer-spin-button,
+	input::-webkit-inner-spin-button {
+		-webkit-appearance: none;
+		margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+	}
+
+	input[type='number'] {
+		-moz-appearance: textfield; /* Firefox */
+	}
 }
 
 @utility container {
